k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
